Add fallback when platform not provided